--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-"helloworld" 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+      
+     <h3>welcome! haymanot</h3> 
+    <img src="./haymi.jpg" alt="White Lily"/>
+    <ui>
+        <li>home page</li>
+        <li>about me</li>
+        <li>lab3</li>
+        <li>lab4</li>
+        <li>lab5</li>
+        <li>lab6</li>
+    </ui>
+
+
+    <a href="http://validator.w3.org/check/referer">
+    <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+    alt="html validator"/>
+</a>
+    
+    <script src="script.js"></script>
+  </body>
+</html>
