--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -9,19 +9,19 @@
       
      <h3>welcome! haymanot</h3> 
     <img src="./haymi.jpg" alt="White Lily"/>
-    <ui>
+    <ul>
         <li>home page</li>
         <li>about me</li>
         <li>lab3</li>
         <li>lab4</li>
         <li>lab5</li>
         <li>lab6</li>
-    </ui>
+    </ul>
 
 
-    <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
+   <footer> <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
     <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
-    alt="html validator"/>
+         alt="html validator"/></footer>
 </a>
   </body>
 </html>
