--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
      <h3>welcome! haymanot</h3> 
     <img src="./haymi.jpg" alt="White Lily"/>
     <ul>
-        <li>home page</li>
-        <li>about me</li>
-        <li>lab3</li>
-        <li>lab4</li>
-        <li>lab5</li>
-        <li>lab6</li>
+        <li><a href = "homepage.html">home page</li></a> 
+        <li><a href= "aboutme.html">about me</li></a>
+        <li><a href = "lab3.html">lab3</li></a>
+        <li><a href = "lab4.html">lab4</li></a> 
+        <li><a href = "lab5.html">lab4</li></a> 
+        <li><a href = "lab6.html">lab4</li></a> 
     </ul>
 
 
