--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
+    <link href="style.css" type="text/css" rel="stylesheet"/>
+
   </head>
   <body>
     <p>
