--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,20 @@
   </head>
   <body>
     <p>
+      
+      I am haymanot adane
       I am who I am
+      I  <span>took</span>
+      <ul>
+        <li> FPP</li>
+        <li> MPP</li>
+    </ul>
+    cources and I wsill take
+    <ul>
+        <li> MWA</li>
+        <li> EA </li>
+        <li> Algorithm</li>
+    </ul>
     </p>
    
   </body>
