--- a/aboutme.html
+++ b/aboutme.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
     <link href="style.css" type="text/css" rel="stylesheet"/>
+    <link href="styleme.css" type="text/css" rel="stylesheet"/>
 
   </head>
   <body>
-    <p>
-      
+      <h1>About Haymanot Adane</h1>
       I am haymanot adane
-      I am who I am
-      I  <span>took</span>
+      <hr/>
+      <h3> My Classes this quarter</h3>
       <ul>
-        <li> FPP</li>
-        <li> MPP</li>
-    </ul>
-    cources and I wsill take
-    <ul>
+        <li> WAP</li>
         <li> MWA</li>
+        <li> ALGORITHMS</li>
         <li> EA </li>
-        <li> Algorithm</li>
     </ul>
-     and i am taking WAP
-    </p>
+
+   <h3> my favorite books</h3>
+    <ol>
+        <li><a href = "https://www.audible.com/ep/title/?asin=B002V5A3TA&source_code=GO1GBSH08141790GC&device=d&cvosrc=ppc.google.%2Bbook%20%2Bfountainhead&cvo_campaign=1078599344&cvo_crid=255441629265&Matchtype=b&gclsrc=aw.ds&ds_rl=1263561&ds_rl=1261256&ds_rl=1262685&gclid=Cj0KCQjw9_mDBhCGARIsAN3PaFOHyQHDP6HCFCwLCO5lQpIG8QnTJmGDs6RdKDltU-MqSMAcEnI26pUaAvrgEALw_wcB"> the fountain head</a></li>
+        <li><a href = "https://www.penguinrandomhouse.com/books/296832/atlas-shrugged-centennial-ed-hc-by-ayn-rand/"> atlas shrugged </a></li>
+        <li><a href = "https://books.google.com/books?hl=en&lr=&id=Z_OweRm7sD8C&oi=fnd&pg=PP1&dq=foundations+of+cryptography++book&ots=0EGQWnU7Jt&sig=v32PgVCRSDWuXltNSJIQnIlrrd4#v=onepage&q=foundations%20of%20cryptography%20%20book&f=false"> foundations of cryptography</a></li>
+    </ol>
+    <h3 class="special">My Mood</h3>
+    <span>happy</span>
+    <img src="./happy.jpg" alt="happy"/>
+    <span>sad</span>
+    <img src="./sad.jpg" alt="sad"/> 
+    <h3>Fun Acts About My Neighbores</h3>
+    <ul>
+        <li>she talks too much</li>
+        <li>she is childish</li>
+
+    </ul>
    
   </body>
 </html>
