--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
   </head>
   <body>
       <h1>About Haymanot Adane</h1>
-      I am haymanot adane
+     <p> I am haymanot adane</p>
       <hr/>
       <h3> My Classes this quarter</h3>
       <ul>
@@ -20,16 +20,16 @@
         <li> EA </li>
     </ul>
 
-   <h3> my favorite books</h3>
+   <h3> My favorite books</h3>
     <ol>
-        <li><a href = "https://www.audible.com/ep/title/?asin=B002V5A3TA&source_code=GO1GBSH08141790GC&device=d&cvosrc=ppc.google.%2Bbook%20%2Bfountainhead&cvo_campaign=1078599344&cvo_crid=255441629265&Matchtype=b&gclsrc=aw.ds&ds_rl=1263561&ds_rl=1261256&ds_rl=1262685&gclid=Cj0KCQjw9_mDBhCGARIsAN3PaFOHyQHDP6HCFCwLCO5lQpIG8QnTJmGDs6RdKDltU-MqSMAcEnI26pUaAvrgEALw_wcB"> the fountain head</a></li>
-        <li><a href = "https://www.penguinrandomhouse.com/books/296832/atlas-shrugged-centennial-ed-hc-by-ayn-rand/"> atlas shrugged </a></li>
-        <li><a href = "https://books.google.com/books?hl=en&lr=&id=Z_OweRm7sD8C&oi=fnd&pg=PP1&dq=foundations+of+cryptography++book&ots=0EGQWnU7Jt&sig=v32PgVCRSDWuXltNSJIQnIlrrd4#v=onepage&q=foundations%20of%20cryptography%20%20book&f=false"> foundations of cryptography</a></li>
+       <li ><a id="hyper1" href  = "https://www.audible.com/ep/title/?asin=B002V5A3TA&source_code=GO1GBSH08141790GC&device=d&cvosrc=ppc.google.%2Bbook%20%2Bfountainhead&cvo_campaign=1078599344&cvo_crid=255441629265&Matchtype=b&gclsrc=aw.ds&ds_rl=1263561&ds_rl=1261256&ds_rl=1262685&gclid=Cj0KCQjw9_mDBhCGARIsAN3PaFOHyQHDP6HCFCwLCO5lQpIG8QnTJmGDs6RdKDltU-MqSMAcEnI26pUaAvrgEALw_wcB">  The Fountain Head</a></li>
+        <li ><a id="hyper2" href = "https://www.penguinrandomhouse.com/books/296832/atlas-shrugged-centennial-ed-hc-by-ayn-rand/"> Atlas Shrugged </a></li>
+        <li ><a id="hyper3" href = "https://books.google.com/books?hl=en&lr=&id=Z_OweRm7sD8C&oi=fnd&pg=PP1&dq=foundations+of+cryptography++book&ots=0EGQWnU7Jt&sig=v32PgVCRSDWuXltNSJIQnIlrrd4#v=onepage&q=foundations%20of%20cryptography%20%20book&f=false"> Foundations of Cryptography</a></li>
     </ol>
-    <h3 class="special">My Mood</h3>
-    <span>happy</span>
+    <h5 class="special">My Mood <br/></h5>
+    <span>happy:</span>
     <img src="./happy.jpg" alt="happy"/>
-    <span>sad</span>
+    <span>sad:</span>
     <img src="./sad.jpg" alt="sad"/> 
     <h3>Fun Acts About My Neighbores</h3>
     <ul>
@@ -37,6 +37,14 @@
         <li>she is childish</li>
 
     </ul>
+
+    <footer> <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
+        <img src="https://sakai.cs.miu.edu/access/content/attachment/4b42a684-55dc-48bd-ba66-192a4879d259/Assignments/05d78301-2e25-4d52-b4c0-528b20c6cab7/HTML-checker.png"
+             alt="html validator"/></a></footer>
+
+             <footer> <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
+                <img src="https://sakai.cs.miu.edu/access/content/attachment/4b42a684-55dc-48bd-ba66-192a4879d259/Assignments/9119c1de-0943-4629-ba2b-d08e0c6bed4b/css_checker.png"
+                     alt="html validator"/></a></footer>
    
   </body>
 </html>
