--- a/aboutme.html
+++ b/aboutme.html
@@ -38,13 +38,13 @@
 
     </ul>
 
-    <footer> <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
-        <img src="https://sakai.cs.miu.edu/access/content/attachment/4b42a684-55dc-48bd-ba66-192a4879d259/Assignments/05d78301-2e25-4d52-b4c0-528b20c6cab7/HTML-checker.png"
-             alt="html validator"/></a></footer>
+     <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
+        <img id="htmlvalidator" src="./HTML-checker.png"
+             alt="html validator"/></a>
 
-             <footer> <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
-                <img src="https://sakai.cs.miu.edu/access/content/attachment/4b42a684-55dc-48bd-ba66-192a4879d259/Assignments/9119c1de-0943-4629-ba2b-d08e0c6bed4b/css_checker.png"
-                     alt="html validator"/></a></footer>
+     <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
+                <img id="cssvalidator" src= "./css_checker (1).png"
+                     alt="css validator"/></a>
    
   </body>
 </html>
