--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
    <footer> <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
-    <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+    <img src="./HTML-checker.png"
          alt="html validator"/></a></footer>
   </body>
 </html>
