--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
+    <link href="indexstyle.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
       
@@ -20,7 +21,7 @@
 
 
    <footer> <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
-    <img src="./HTML-checker.png"
+    <img id ="htmlchecker" src="./HTML-checker.png"
          alt="html validator"/></a></footer>
   </body>
 </html>
