--- a/aboutme.html
+++ b/aboutme.html
@@ -22,9 +22,9 @@
 
    <h3> My Favorite Books</h3>
     <ol>
-       <li >The Fountain Head<a id="hyper1" href  = "https://www.audible.com/ep/title/?asin=B002V5A3TA&source_code=GO1GBSH08141790GC&device=d&cvosrc=ppc.google.%2Bbook%20%2Bfountainhead&cvo_campaign=1078599344&cvo_crid=255441629265&Matchtype=b&gclsrc=aw.ds&ds_rl=1263561&ds_rl=1261256&ds_rl=1262685&gclid=Cj0KCQjw9_mDBhCGARIsAN3PaFOHyQHDP6HCFCwLCO5lQpIG8QnTJmGDs6RdKDltU-MqSMAcEnI26pUaAvrgEALw_wcB">  (IMDB)</a></li>
-        <li >Atlas Shrugged<a id="hyper2" href = "https://www.penguinrandomhouse.com/books/296832/atlas-shrugged-centennial-ed-hc-by-ayn-rand/"> (STSH) </a></li>
-        <li >Foundations of Cryptography<a id="hyper3" href = "https://books.google.com/books?hl=en&lr=&id=Z_OweRm7sD8C&oi=fnd&pg=PP1&dq=foundations+of+cryptography++book&ots=0EGQWnU7Jt&sig=v32PgVCRSDWuXltNSJIQnIlrrd4#v=onepage&q=foundations%20of%20cryptography%20%20book&f=false"> (FOCG)</a></li>
+       <li >The Fountain Head<a class="hyper1" href  = "https://www.audible.com/ep/title/?asin=B002V5A3TA&source_code=GO1GBSH08141790GC&device=d&cvosrc=ppc.google.%2Bbook%20%2Bfountainhead&cvo_campaign=1078599344&cvo_crid=255441629265&Matchtype=b&gclsrc=aw.ds&ds_rl=1263561&ds_rl=1261256&ds_rl=1262685&gclid=Cj0KCQjw9_mDBhCGARIsAN3PaFOHyQHDP6HCFCwLCO5lQpIG8QnTJmGDs6RdKDltU-MqSMAcEnI26pUaAvrgEALw_wcB">  (IMDB)</a></li>
+        <li >Atlas Shrugged<a class="hyper2" href = "https://www.penguinrandomhouse.com/books/296832/atlas-shrugged-centennial-ed-hc-by-ayn-rand/"> (STSH) </a></li>
+        <li >Foundations of Cryptography<a class="hyper3" href = "https://books.google.com/books?hl=en&lr=&id=Z_OweRm7sD8C&oi=fnd&pg=PP1&dq=foundations+of+cryptography++book&ots=0EGQWnU7Jt&sig=v32PgVCRSDWuXltNSJIQnIlrrd4#v=onepage&q=foundations%20of%20cryptography%20%20book&f=false"> (FOCG)</a></li>
     </ol>
     <h5 class="special">My Mood <br/></h5>
     <span>happy:</span>
@@ -39,11 +39,11 @@
     </ul>
 
      <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
-        <img id="htmlvalidator" src="./HTML-checker.png"
+        <img class="htmlvalidator" src="./HTML-checker.png"
              alt="html validator"/></a>
 
      <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
-                <img id="cssvalidator" src= "./css_checker (1).png"
+                <img class="cssvalidator" src= "./css_checker (1).png"
                      alt="css validator"/></a>
    
   </body>
