--- a/aboutme.html
+++ b/aboutme.html
@@ -42,9 +42,12 @@
         <img class="htmlvalidator" src="./HTML-checker.png"
              alt="html validator"/></a>
 
-     <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
-                <img class="cssvalidator" src= "./css_checker (1).png"
-                     alt="css validator"/></a>
+  
+              <a href="http://jigsaw.w3.org/css-validator/check/referer/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
+              <img class = "cssvalidator"src=http://jigsaw.w3.org/css-validator/images/vcss
+              alt="Valid CSS!"/>
+              </a>
+      
    
   </body>
 </html>
