--- a/aboutme.html
+++ b/aboutme.html
@@ -43,7 +43,7 @@
              alt="html validator"/></a>
 
   
-              <a href="http://jigsaw.w3.org/css-validator/check/referer/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
+              <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
               <img class = "cssvalidator"src=http://jigsaw.w3.org/css-validator/images/vcss
               alt="Valid CSS!"/>
               </a>
