--- a/lab3.html
+++ b/lab3.html
@@ -57,7 +57,7 @@
 			<h1>CSS Zen Garden</h1>
 			<h2>The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design</h2>
 			<ul id="header-home">
-				<li><a href="hi"> Contact Me</a></li>
+				<li><a href="./haymi.html"> Contact Me</a></li>
 				
 				</ul>
 		</header>
