--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
-    <link href="indexstyle.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
       
@@ -14,14 +13,16 @@
       <li><a href = "homepage.html">home page</a></li> 
       <li><a href= "aboutme.html">about me</a></li>
       <li><a href = "lab3.html">lab3</a></li>
-      <li><a href = "lab4.html">lab4</a></li> 
+      <li><a href = "form1.html">lab4</a></li> 
       <li><a href = "lab5.html">lab4</a></li> 
       <li><a href = "lab6.html">lab4</a></li> 
     </ul>
 
 
    <footer> <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fhaymanot12.github.io%2Fhaymanot.github.io%2F">
-    <img id ="htmlchecker" src="./HTML-checker.png"
+    <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
          alt="html validator"/></a></footer>
+
+        
   </body>
 </html>
