--- a/form1.html
+++ b/form1.html
@@ -16,10 +16,10 @@
 
                  <div id="left">
                     <pre id="topp">Register now while seats are available!</pre>
-                    <pre id="firstname">First Name                        <input type="text" name="first-name" required><br/></pre>
-                    <pre>Last Name                         <input type="text" name="last-name" required><br/></pre>
-                    <pre>Company/Institution               <input type="text" name="company" required><br/> </pre>
-                    <pre>Address                           <textarea name="adress" required></textarea><br/> </pre>
+                    <pre id="firstname">First Name                      <input type="text" name="first-name" required><br/></pre>
+                    <pre id="lastname">Last Name                        <input type="text" name="last-name" required><br/></pre>
+                    <pre id="company">Company/Institution               <input type="text" name="company" required><br/> </pre>
+                    <pre id="address">Address                           <textarea name="adress" required></textarea><br/> </pre>
                     <pre>City                              <input type="text" name="city" ><br/></pre> 
                     <pre>State/Province/Region             <select name="select">
                         <option>-select-</option>
@@ -40,8 +40,8 @@
                         <option>Italy</option>
                         </select><br/><br/> </pre>
                    
-                    <pre>Email                             <input type="email" name="email" required><br/></pre>
-                    <pre>Phone Number                      <input type="number" name="num" required><br/></pre>
+                    <pre id="email">Email                             <input type="email" name="email" required><br/></pre>
+                    <pre id="number">Phone Number                      <input type="number" name="num" required><br/></pre>
                 </div>
 
         <div id="right">
@@ -62,12 +62,12 @@
             <pre>Payable At            <input type="text" name="payable"></pre>
    
             </div>
-      
+        </form>
         <footer id="bottomcenter">
          <button id="submit" type="submit" name="Submit">Submit</button>
         <button id="reset" type="reset" name="reset">Reset </button>
         </footer>
-    </form>
+   
     </div> 
 </body>
 </html>
