--- a/lab5.html
+++ b/lab5.html
@@ -6,7 +6,7 @@
     <title>repl.it</title>
   </head>
   <body>
-      
-  lab5
+      <h1>this one is lab5 to see the result of this .js file go to inspection then consol</h1>
+  <script src="lab5.js"></script>
   </body>
 </html>
